# HolonCode

./: .gitignore  CLAUDE.md  boot.py  pyproject.toml  看我看我看我一定要看我.md
data/: CAPABILITY.json  RULES.json  SOUL.json  UserSettings.example.json  sessions.json
docs/: PPT制作提示词-项目调研报告.md  项目初期调研报告.docx  项目初期调研报告.md
docs/plans/: 2026-07-07-atri-python-migration.md  2026-07-08-streaming-output.md  2026-07-09-web-tools-implementation.md  2026-07-09-web-tools-replication-design.md  2026-07-12-desktop-ui-implementation.md  2026-07-12-desktop-ui-redesign.md
skills/code-reviewer/: SKILL.md
skills/confidant/: SKILL.md
skills/storyteller/: SKILL.md
skills/translator/: SKILL.md
src/atri/: __init__.py  ai_service.py  content_compact.py  conversation.py  file_tool.py  main.py  memory_tool.py  models.py  prompt_manager.py  setup.py  skill_loader.py  tieba_tool.py  tool_manager.py  web_tools.py
src/atri/ui/: __init__.py  app.py  app_shell.py  chat_ui.py  chat_view.py  composer.py  file_panel.py  main_window.py  settings_dialog.py  sidebar.py  status_bar.py  theme.py  thread.py  worker.py
src/code_runner/: __init__.py  runner.py
tests/: conftest.py  test_ai_service.py  test_content_compact.py  test_conversation.py  test_file_tool.py  test_memory_tool.py  test_models.py  test_prompt_manager.py  test_pyqt5.py  test_tool_manager.py
workspace/文档/: README.md  任务日志.txt
workspace/新文件夹/: 贴吧趣帖.md
workspace/游戏/: games.py  maze.py
workspace/配置/: 系统参数.cfg
