[project]
name = "atri"
version = "1.0.0"
description = "ATRI - 亚托莉, a role-playing AI chatbot powered by DeepSeek"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
atri = "atri.main:main"
atri-setup = "atri.setup:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
tieba = [
    "aiotieba>=4.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
