[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project]
name = "atri"
version = "1.0.0"
description = "ATRI - 亚托莉, a role-playing AI chatbot powered by DeepSeek"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "markdown>=3.10.2",
    "pygments>=2.20.0",
    "pyside6>=6.5.0",
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
atri = "atri.main:cli"
atri-ui = "atri.ui.app:main"
atri-setup = "atri.setup:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
tieba = [
    "aiotieba>=4.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
